styles/bbcode - fix font-size and word-wrap properties of code.bbcode blocks

--- a/falocalrepo_server/static/styles/bbcode.css
+++ b/falocalrepo_server/static/styles/bbcode.css
@@ -1,6 +1,8 @@
 code.bbcode {
     font-family: inherit !important;
     font-style: inherit !important;
+    font-size: inherit !important;
+    word-wrap: inherit !important;
     display: block !important;
     color: inherit !important;
 }
